edit twitter and blog link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="inline-flex justify-center space-x-4 w-full">
                         <ul class="social-links inline-flex w-full bg-clip-text text-transparent bg-gradient-to-r from-slate-200/60 via-slate-200 to-slate-200/60 mb-8">
                             <li>
-                                <a href="https://twitter.com/Amin__Bhr" aria-label="Twitter">
+                                <a href="https://twitter.com/Amin_Bhr_" aria-label="Twitter">
                                     <span class="fa-brands fa-x-twitter"></span>
                                     <span class="subtitle">Twitter (X)</span>
                                 </a>
@@ -53,7 +53,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://blog.aminbhr.ir/" aria-label="Blog">
+                                <a href="https://aminbhr.ir/blog" aria-label="Blog">
                                     <span class="fab fa-wordpress"></span>
                                     <span class="subtitle">Blog</span>
                                 </a>
